--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -21,7 +21,7 @@
           </p>
 
           <div class="mt-3">
-            <%= product.price %>
+            <%= number_to_currency(product.price) %>
           </div>
 
         </div>
