--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -10,7 +10,7 @@
   <table id="products" class="mx-auto">
     <tfoot>
       <tr>
-        <td colspan="3">
+        <td colspan="3" id="new-product">
           <div class="mt-8">
             <%= link_to 'New product', new_product_path, class: "inline rounded-lg py-3 px-5 bg-green-600 text-white block font-medium" %>
           </div>
