--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -5,6 +5,10 @@
     </p>
   <% end %>
 
+  <% if session[:counter] > 5%>
+    <p>You visited this site: <%= pluralize(session[:counter], 'time') %></p>
+  <% end  %>
+
   <h1 class="font-bold text-xl mb-6 pb-2 border-b-2">
     Your Pragmatic Catalog
   </h1>
@@ -24,8 +28,12 @@
 
               <div class="mt-3">
                 <%= number_to_currency(product.price) %>
-              </div>
 
+                <%= button_to 'Add to Cart',
+                              line_items_path(product_id: product),
+                              form_class: 'inline',
+                              class: 'ml-4 rounded-lg py-1 px-2 text-white bg-green-600' %>
+              </div>
             </div>
           </li>
         <% end  %>
